--- a/kamalsite/shop/templates/shop/details.html
+++ b/kamalsite/shop/templates/shop/details.html
@@ -1,9 +1,16 @@
 <h1>{{ product.name }}</h1>
-<br>
-<li>{{ product.description }}</li>
-<br>
-# Make Like and Add to cart buttons work.
-<li>Like {{ product.likes }} | Add to cart</li>
-<br>
-<li><a href={% url 'shop:purchase' product.id %}>Buy</a></li>
-<li><a href={% url 'shop:index' %}>Back to catalog</a></li>
+<p>{{ product.description }}</p>
+Tap to like:
+<form action="{% url 'shop:like' product.id %}" method="post">
+{% csrf_token %}
+    <input type="submit" value="Like {{ product.likes }}" />
+</form>
+Tap to add to cart:
+<form action="{% url 'shop:add_to_cart' product.id %}" method="post">
+{% csrf_token %}
+    <input type="submit" value="Add to cart" />
+</form>
+<p>
+    <a href={% url 'shop:purchase' product.id %}>Buy</a> | 
+    <a href={% url 'shop:index' %}>Back to catalog</a>
+</p>
