--- a/kamalsite/shop/templates/shop/index.html
+++ b/kamalsite/shop/templates/shop/index.html
@@ -1,10 +1,11 @@
 {% if most_popular_products %}
     <ul>
     {% for product in most_popular_products %}
-        <li>
-        <a href="{% url 'shop:details' product.id %}">{{ product.name }}</a></br>
-        Likes: {{product.likes}}
-        </li>
+        <p>
+            <a href="{% url 'shop:details' product.id %}">
+                <strong>{{ product.name }}</strong>
+            </a> | Likes: {{product.likes}}
+        </p>
     {% endfor %}
     </ul>
 {% else %}
