--- a/kamalsite/shop/templates/shop/index.html
+++ b/kamalsite/shop/templates/shop/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'shop/style.css' %}">
+
 {% if most_popular_products %}
     <ul>
     {% for product in most_popular_products %}
