shop.forms: - Remove __init__() from LikeForm, AdditionForm, and   CreateAdditionForm, - Update fields in LikeForm and AdditionForm, shop.views: - Create ProductCardAdditionView to handle addition to cart, - Update get() and post() of CatalogView to include addition forms, shop.urls: - Create a urlpattern 'product-card-add', shop/templates: - Update catalog.html to include add-to-cart feature, general: - Update imports from project modules

--- a/kamalsite/shop/templates/shop/catalog.html
+++ b/kamalsite/shop/templates/shop/catalog.html
@@ -15,7 +15,7 @@
     </form>
 </div>
 
-{% for product, like_form in view.product_cards %}
+{% for product, like_form, add_form in view.product_cards %}
     <div class="product-card">
         <b>Name:</b>
         <a href="{% url 'shop:product-detail' product.pk %}">
@@ -27,7 +27,13 @@
         <form action="{% url 'shop:product-card-like' product.id %}" class="like-incard" method="post">
             {% csrf_token %}
             {{ like_form }}
-            <input type="submit" value="{{ like_button }}" /> {{ product.likes.qty }}
+            <button type="submit">{{ like_button }}</button> {{ product.likes.qty }}
         </form>
+        <form action="{% url 'shop:product-card-add' product.id %}" class="add-incard" method="post">
+            {% csrf_token %}
+            {{ add_form }}
+            <button type="submit">{{ add_to_cart_button }}</button>
+        </form>
+        </br>
     </div>
 {% endfor %}
